// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine:exact note basic create node: bazMd 1`] = `
Object {
  "content": "baz.body
",
  "data": Object {
    "desc": "",
    "id": "baz",
    "title": "Baz",
  },
  "excerpt": "",
  "isEmpty": false,
}
`;

exports[`engine:exact note basic create node: bazNode 1`] = `
Object {
  "body": "baz.body",
  "children": Array [],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "baz",
  "id": "baz",
  "parent": "root",
  "stub": false,
  "title": "Baz",
  "type": "note",
}
`;

exports[`engine:exact note basic create when empty: notes 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
]
`;

exports[`engine:exact note basic create when empty: notes-root-content 1`] = `
"
"
`;

exports[`engine:exact note basic create when empty: notes-root-data 1`] = `
Object {
  "desc": "",
  "title": "root",
}
`;

exports[`engine:exact note basic create when empty: schemas 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root.schema",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "schema",
  },
]
`;

exports[`engine:exact note basic fetch node with custom att 1`] = `
Object {
  "body": "",
  "children": Array [],
  "created": 123,
  "custom": Object {
    "bond": 42,
  },
  "data": Object {},
  "desc": "",
  "fname": "foo.one",
  "id": "foo.one",
  "parent": "foo",
  "stub": false,
  "title": "foo.one",
  "type": "note",
  "updated": 456,
}
`;

exports[`engine:exact note basic fetch node: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "Refactor",
      "Bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "
- [[refactor.one]]
",
    "children": Array [
      "foo.one",
      "foo.two",
      "Three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
      "Two",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor",
    "parent": "root",
    "stub": false,
    "title": "Refactor",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "Bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "Three",
    "type": "note",
  },
  Object {
    "body": "- [[refactor.two]]
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.one",
    "parent": "Refactor",
    "stub": false,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.two",
    "parent": "Refactor",
    "stub": false,
    "title": "Two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Temp",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "Bar",
    "stub": true,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "Three",
    "stub": false,
    "title": "Alpha",
    "type": "note",
  },
  Object {
    "body": "Template text",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one.temp",
    "parent": "One",
    "stub": false,
    "title": "Temp",
    "type": "note",
  },
]
`;

exports[`engine:exact note basic updateNode: bazNote 1`] = `
Object {
  "body": "",
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "baz",
  "stub": false,
  "title": "Baz",
  "type": "note",
}
`;

exports[`engine:exact note basic updateNode: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "Refactor",
      "Bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "
- [[refactor.one]]
",
    "children": Array [
      "foo.one",
      "foo.two",
      "Three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
      "Two",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor",
    "parent": "root",
    "stub": false,
    "title": "Refactor",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "Bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "Three",
    "type": "note",
  },
  Object {
    "body": "- [[refactor.two]]
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.one",
    "parent": "Refactor",
    "stub": false,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.two",
    "parent": "Refactor",
    "stub": false,
    "title": "Two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Temp",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "Bar",
    "stub": true,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "Three",
    "stub": false,
    "title": "Alpha",
    "type": "note",
  },
  Object {
    "body": "Template text",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one.temp",
    "parent": "One",
    "stub": false,
    "title": "Temp",
    "type": "note",
  },
]
`;

exports[`engine:exact note edge md exist, no schema file: listDir 1`] = `
Array [
  "bar.one.temp.md",
  "bar.schema.yml",
  "foo.md",
  "foo.one.md",
  "foo.three.alpha.md",
  "foo.two.md",
  "refactor.md",
  "refactor.one.md",
  "refactor.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact note edge md exist, no schema file: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "Refactor",
      "Bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "
- [[refactor.one]]
",
    "children": Array [
      "foo.one",
      "foo.two",
      "Three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
      "Two",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor",
    "parent": "root",
    "stub": false,
    "title": "Refactor",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "Bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "Three",
    "type": "note",
  },
  Object {
    "body": "- [[refactor.two]]
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.one",
    "parent": "Refactor",
    "stub": false,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.two",
    "parent": "Refactor",
    "stub": false,
    "title": "Two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Temp",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "Bar",
    "stub": true,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "Three",
    "stub": false,
    "title": "Alpha",
    "type": "note",
  },
  Object {
    "body": "Template text",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one.temp",
    "parent": "One",
    "stub": false,
    "title": "Temp",
    "type": "note",
  },
]
`;

exports[`engine:exact note edge no md file, no schema : listDir 1`] = `
Array [
  "bar.one.temp.md",
  "bar.schema.yml",
  "foo.md",
  "foo.one.md",
  "foo.three.alpha.md",
  "foo.two.md",
  "refactor.md",
  "refactor.one.md",
  "refactor.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact note edge no md file, no schema : main 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
      "Refactor",
      "Bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "
- [[refactor.one]]
",
    "children": Array [
      "foo.one",
      "foo.two",
      "Three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
      "Two",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor",
    "parent": "root",
    "stub": false,
    "title": "Refactor",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "Bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "Three",
    "type": "note",
  },
  Object {
    "body": "- [[refactor.two]]
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.one",
    "parent": "Refactor",
    "stub": false,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.two",
    "parent": "Refactor",
    "stub": false,
    "title": "Two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Temp",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "Bar",
    "stub": true,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "Three",
    "stub": false,
    "title": "Alpha",
    "type": "note",
  },
  Object {
    "body": "Template text",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one.temp",
    "parent": "One",
    "stub": false,
    "title": "Temp",
    "type": "note",
  },
]
`;

exports[`engine:exact note edge no md file, schema exist: fooNote 1`] = `
Object {
  "body": "
- [[refactor.one]]
",
  "children": Array [
    "foo.one",
    "foo.two",
    "Three",
  ],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
}
`;

exports[`engine:exact note edge no md file, schema exist: listDir 1`] = `
Array [
  "bar.one.temp.md",
  "bar.schema.yml",
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.three.alpha.md",
  "foo.two.md",
  "refactor.md",
  "refactor.one.md",
  "refactor.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact note edge no md file, schema exist: main 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
      "Refactor",
      "Bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "
- [[refactor.one]]
",
    "children": Array [
      "foo.one",
      "foo.two",
      "Three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
      "Two",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor",
    "parent": "root",
    "stub": false,
    "title": "Refactor",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "Bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "Three",
    "type": "note",
  },
  Object {
    "body": "- [[refactor.two]]
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.one",
    "parent": "Refactor",
    "stub": false,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.two",
    "parent": "Refactor",
    "stub": false,
    "title": "Two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Temp",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "Bar",
    "stub": true,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "Three",
    "stub": false,
    "title": "Alpha",
    "type": "note",
  },
  Object {
    "body": "Template text",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one.temp",
    "parent": "One",
    "stub": false,
    "title": "Temp",
    "type": "note",
  },
]
`;

exports[`engine:exact note edge note without fm: fooNote 1`] = `
Object {
  "body": "this is foo",
  "children": Array [
    "foo.one",
    "foo.two",
    "Three",
  ],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "Foo",
  "type": "note",
}
`;

exports[`engine:exact note edge note without id: fooNote 1`] = `
Object {
  "body": "this is foo
",
  "children": Array [
    "foo.one",
    "foo.two",
    "Three",
  ],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "Foo",
  "type": "note",
}
`;

exports[`engine:exact note main delete node with children: listDi2 1`] = `
Array [
  "bar.one.temp.md",
  "bar.schema.yml",
  "foo.one.md",
  "foo.schema.yml",
  "foo.three.alpha.md",
  "foo.two.md",
  "refactor.md",
  "refactor.one.md",
  "refactor.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact note main delete node with children: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "Refactor",
      "Bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
      "Two",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor",
    "parent": "root",
    "stub": false,
    "title": "Refactor",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "Bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "Three",
    "type": "note",
  },
  Object {
    "body": "- [[refactor.two]]
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.one",
    "parent": "Refactor",
    "stub": false,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.two",
    "parent": "Refactor",
    "stub": false,
    "title": "Two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Temp",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "Bar",
    "stub": true,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "Three",
    "stub": false,
    "title": "Alpha",
    "type": "note",
  },
  Object {
    "body": "Template text",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one.temp",
    "parent": "One",
    "stub": false,
    "title": "Temp",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "Three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": true,
    "title": "Foo",
    "type": "note",
  },
]
`;

exports[`engine:exact note main delete node with children: main2 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "Refactor",
      "Bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
      "Two",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor",
    "parent": "root",
    "stub": false,
    "title": "Refactor",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "Bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "Three",
    "type": "note",
  },
  Object {
    "body": "- [[refactor.two]]
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.one",
    "parent": "Refactor",
    "stub": false,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.two",
    "parent": "Refactor",
    "stub": false,
    "title": "Two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Temp",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "Bar",
    "stub": true,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "Three",
    "stub": false,
    "title": "Alpha",
    "type": "note",
  },
  Object {
    "body": "Template text",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one.temp",
    "parent": "One",
    "stub": false,
    "title": "Temp",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "Three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": true,
    "title": "Foo",
    "type": "note",
  },
]
`;

exports[`engine:exact note main open stub node: listDir 1`] = `
Array [
  "bar.one.temp.md",
  "bar.schema.yml",
  "bar.two.md",
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.three.alpha.md",
  "foo.two.md",
  "refactor.md",
  "refactor.one.md",
  "refactor.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact note main open stub node: listDir2 1`] = `
Array [
  "bar.one.temp.md",
  "bar.schema.yml",
  "bar.two.md",
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.three.alpha.md",
  "foo.two.md",
  "refactor.md",
  "refactor.one.md",
  "refactor.two.md",
  "root.md",
  "test1.schema.yml",
]
`;

exports[`engine:exact note main open stub node: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "Refactor",
      "Bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "
- [[refactor.one]]
",
    "children": Array [
      "foo.one",
      "foo.two",
      "Three",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "One",
      "Two",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor",
    "parent": "root",
    "stub": false,
    "title": "Refactor",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Two",
      "One",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "Bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "Three",
    "type": "note",
  },
  Object {
    "body": "- [[refactor.two]]
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.one",
    "parent": "Refactor",
    "stub": false,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "refactor.two",
    "parent": "Refactor",
    "stub": false,
    "title": "Two",
    "type": "note",
  },
  Object {
    "body": "bar.two.body
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.two",
    "parent": "Bar",
    "stub": false,
    "title": "Two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "Temp",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "Bar",
    "stub": true,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "Three",
    "stub": false,
    "title": "Alpha",
    "type": "note",
  },
  Object {
    "body": "Template text",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one.temp",
    "parent": "One",
    "stub": false,
    "title": "Temp",
    "type": "note",
  },
]
`;

exports[`engine:exact schema basic init: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "bar",
      "foo",
      "test1",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root.schema",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "bar",
      "bar",
    ],
    "custom": Object {},
    "data": Object {
      "namespace": true,
    },
    "desc": "",
    "fname": "bar.schema",
    "parent": "root",
    "stub": false,
    "title": "bar",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "bar",
      "bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "test1",
      "test1",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "test1.schema",
    "parent": "root",
    "stub": false,
    "title": "test1",
    "type": "schema",
  },
]
`;

exports[`engine:exact schema basic write schema: bond.schema 1`] = `
"-
    id: bond
    title: bond
    desc: \\"\\"
    parent: root
"
`;

exports[`engine:exact schema basic write schema: schema 1`] = `
Object {
  "body": "",
  "children": Array [],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "bond.schema",
  "parent": "root",
  "stub": false,
  "title": "bond",
  "type": "schema",
}
`;
